@@ -77,9 +77,11 @@ public class SysRoleServiceImpl extends ServiceImpl<SysRoleMapper, SysRoleEntity
      */
     @Override
     public R insert(SysRoleEntity sysRole) {
-        Optional.ofNullable(baseMapper.selectOne(new QueryWrapper<SysRoleEntity>().eq("role_code", sysRole.getRoleCode()))).ifPresent(item -> {
-            throw new AppException(Error.DUPLICATED_USER);
-        });
+        Optional.ofNullable(
+                        baseMapper.selectOne(new QueryWrapper<SysRoleEntity>().eq("role_code", sysRole.getRoleCode())))
+                .ifPresent(item -> {
+                    throw new AppException(Error.DUPLICATED_USER);
+                });
         try {
             if (saveOrUpdate(sysRole)) {
                 return R.yes(String.format("%1$s添加成功.", sysRole.getRoleName()));
@@ -121,102 +123,161 @@ public class SysRoleServiceImpl extends ServiceImpl<SysRoleMapper, SysRoleEntity
     }
 
     @Override
+    @Transactional(readOnly = true)
     public R queryRoleListByParam(final RoleListQueryParam queryParam) {
-        return Optional.ofNullable(queryParam).map(queryParam1 -> Optional.ofNullable(queryParam1.getId()).map(id -> Optional.ofNullable(baseMapper.queryRoleListById(id)).map(records -> R.yes("查找成功.").setData(SysRoleDto.builder().records(records).build())).orElse(R.yes("查找成功.").setData(SysRoleDto.builder().build()))).orElse(Optional.ofNullable(baseMapper.queryRoleListByParam(queryParam)).map(records -> R.yes("Success.").setData(SysRoleDto.builder().page(queryParam.getPage()).pageSize(queryParam.getPageSize()).total(records.size()).records(records).build())).orElse(R.yes("Success").setData(SysRoleDto.builder().build())))).orElseGet(() -> Optional.ofNullable(baseMapper.queryRoleListByParam(queryParam)).map(records -> R.yes("Success.").setData(SysRoleDto.builder().total(records.size()).records(records).build())).orElse(R.yes("Success").setData(SysRoleDto.builder().build())));
+        return Optional.ofNullable(queryParam)
+                .map(queryParam1 -> Optional.ofNullable(queryParam1.getId())
+                        .map(id -> Optional.ofNullable(baseMapper.queryRoleListById(id))
+                                .map(records -> R.yes("查找成功.")
+                                        .setData(SysRoleDto.builder()
+                                                .records(records)
+                                                .build()))
+                                .orElse(R.yes("查找成功.")
+                                        .setData(SysRoleDto.builder().build())))
+                        .orElse(Optional.ofNullable(baseMapper.queryRoleListByParam(queryParam))
+                                .map(records -> R.yes("Success.")
+                                        .setData(SysRoleDto.builder()
+                                                .page(queryParam.getPage())
+                                                .pageSize(queryParam.getPageSize())
+                                                .total(records.size())
+                                                .records(records)
+                                                .build()))
+                                .orElse(R.yes("Success")
+                                        .setData(SysRoleDto.builder().build()))))
+                .orElseGet(() -> Optional.ofNullable(baseMapper.queryRoleListByParam(queryParam))
+                        .map(records -> R.yes("Success.")
+                                .setData(SysRoleDto.builder()
+                                        .total(records.size())
+                                        .records(records)
+                                        .build()))
+                        .orElse(R.yes("Success").setData(SysRoleDto.builder().build())));
     }
 
     @Transactional(rollbackFor = Throwable.class)
     @Override
     public R editRole(final EditRequest sysRole) {
-        return Optional.ofNullable(baseMapper.selectById(sysRole.id())).map(sysRole1 -> {
-            sysRole1.setRoleName(sysRole.roleName());
-            sysRole1.setMemo(sysRole.memo());
-            sysRole1.setSort(sysRole.sort());
-            if (updateById(sysRole1)) {
-                return R.yes("修改成功");
-            } else {
-                return R.no("修改失败");
-            }
-        }).orElse(R.no("此角色信息不存在."));
+        return Optional.ofNullable(baseMapper.selectById(sysRole.id()))
+                .map(sysRole1 -> {
+                    sysRole1.setRoleName(sysRole.roleName());
+                    sysRole1.setMemo(sysRole.memo());
+                    sysRole1.setSort(sysRole.sort());
+                    if (updateById(sysRole1)) {
+                        return R.yes("修改成功");
+                    } else {
+                        return R.no("修改失败");
+                    }
+                })
+                .orElse(R.no("此角色信息不存在."));
     }
 
     @Override
     @Transactional
     public R deleteRoleById(final EditRequest sysRole) {
-        return Optional.ofNullable(baseMapper.selectById(sysRole.id())).map(sysRole1 -> {
-            if (sysRole1.getId() != 1L && !"super-admin".equals(sysRole1.getRoleCode())) {
-                sysRole1.setLogicalDelete(0);
-                if (baseMapper.update(sysRole1) > 0) {
-                    return R.yes("删除成功.");
-                } else {
-                    return R.no("删除失败.");
-                }
-            } else {
-                return R.no("干嘛删管理员,你想做什!!!?");
-            }
-        }).orElse(R.no("没有该角色"));
+        return Optional.ofNullable(baseMapper.selectById(sysRole.id()))
+                .map(sysRole1 -> {
+                    if (sysRole1.getId() != 1L && !"super-admin".equals(sysRole1.getRoleCode())) {
+                        sysRole1.setLogicalDelete(0);
+                        if (baseMapper.update(sysRole1) > 0) {
+                            return R.yes("删除成功.");
+                        } else {
+                            return R.no("删除失败.");
+                        }
+                    } else {
+                        return R.no("干嘛删管理员,你想做什!!!?");
+                    }
+                })
+                .orElse(R.no("没有该角色"));
     }
 
     @Override
     @Transactional
     public R editRoleDeptDataPermission(final EditRoleDeptDataPermissionRequest editRoleDeptDataPermissionRequest) {
-        return Optional.ofNullable(baseMapper.selectOne(new QueryWrapper<SysRoleEntity>().eq("role_code", editRoleDeptDataPermissionRequest.roleCode()))).map(sysRole1 -> {
-            sysRole1.setDeptDataPermissionType(editRoleDeptDataPermissionRequest.deptDataPermissionType());
-            sysRole1.setDeptDataPermissionCustom(editRoleDeptDataPermissionRequest.deptDataPermissionCustom());
-            if (baseMapper.update(sysRole1) > 0) {
-                return R.yes(String.format("%1$s编辑角色部门数据权限成功.", editRoleDeptDataPermissionRequest.roleCode()));
-            } else {
-                return R.no("修改失败");
-            }
-        }).orElse(R.no(String.format("%1$s此角色信息不存在.", editRoleDeptDataPermissionRequest.roleCode())));
+        return Optional.ofNullable(baseMapper.selectOne(new QueryWrapper<SysRoleEntity>()
+                        .eq("role_code", editRoleDeptDataPermissionRequest.roleCode())))
+                .map(sysRole1 -> {
+                    sysRole1.setDeptDataPermissionType(editRoleDeptDataPermissionRequest.deptDataPermissionType());
+                    sysRole1.setDeptDataPermissionCustom(editRoleDeptDataPermissionRequest.deptDataPermissionCustom());
+                    if (baseMapper.update(sysRole1) > 0) {
+                        return R.yes(String.format("%1$s编辑角色部门数据权限成功.", editRoleDeptDataPermissionRequest.roleCode()));
+                    } else {
+                        return R.no("修改失败");
+                    }
+                })
+                .orElse(R.no(String.format("%1$s此角色信息不存在.", editRoleDeptDataPermissionRequest.roleCode())));
     }
 
     @Override
     @Transactional(readOnly = true)
     public R queryUserByRole(final QueryUserByRoleRequest queryUserByRoleRequest) {
-        return Optional.ofNullable(baseMapper.queryUserByRole(queryUserByRoleRequest)).map(users -> R.yes("Success").setData("records", users)).orElse(R.no("Fail"));
+        return Optional.ofNullable(baseMapper.queryUserByRole(queryUserByRoleRequest))
+                .map(users -> R.yes("Success").setData("records", users))
+                .orElse(R.no("Fail"));
     }
 
     @Override
     @Transactional(rollbackFor = Throwable.class)
     @CacheEvict(key = "#root.args[0].roleCode")
     public R editRoleMenu(final EditRoleMenuRequest editRoleMenuRequest) {
-        return Optional.ofNullable(baseMapper.selectOne(new QueryWrapper<SysRoleEntity>().eq("role_code", editRoleMenuRequest.roleCode()))).map(sysRole -> {
-            if ((!editRoleMenuRequest.roleMenu().isEmpty() && (sysRoleMenuService.remove(new QueryWrapper<SysRoleMenuEntity>().eq("sys_role_role_code", sysRole.getRoleCode())) | sysRoleMenuService.saveBatch(editRoleMenuRequest.roleMenu()))) | (!editRoleMenuRequest.roleButton().isEmpty() && (sysRoleButtonService.remove(new QueryWrapper<SysRoleButtonEntity>().eq("sys_role_role_code", sysRole.getRoleCode())) | sysRoleButtonService.saveBatch(editRoleMenuRequest.roleButton())))) {
-                sysRole.setDefaultPage(editRoleMenuRequest.defaultPage());
-                baseMapper.update(sysRole);
-                return R.yes(String.format("%1$s编辑角色菜单成功.", editRoleMenuRequest.roleCode()));
-            } else {
-                throw new AppException(Error.COMMON_EXCEPTION);
-            }
-        }).orElse(R.no("角色不存在."));
+        return Optional.ofNullable(baseMapper.selectOne(
+                        new QueryWrapper<SysRoleEntity>().eq("role_code", editRoleMenuRequest.roleCode())))
+                .map(sysRole -> {
+                    if ((!editRoleMenuRequest.roleMenu().isEmpty()
+                            && (sysRoleMenuService.remove(new QueryWrapper<SysRoleMenuEntity>()
+                            .eq("sys_role_role_code", sysRole.getRoleCode()))
+                            | sysRoleMenuService.saveBatch(editRoleMenuRequest.roleMenu())))
+                            | (!editRoleMenuRequest.roleButton().isEmpty()
+                            && (sysRoleButtonService.remove(new QueryWrapper<SysRoleButtonEntity>()
+                            .eq("sys_role_role_code", sysRole.getRoleCode()))
+                            | sysRoleButtonService.saveBatch(editRoleMenuRequest.roleButton())))) {
+                        sysRole.setDefaultPage(editRoleMenuRequest.defaultPage());
+                        baseMapper.update(sysRole);
+                        return R.yes(String.format("%1$s编辑角色菜单成功.", editRoleMenuRequest.roleCode()));
+                    } else {
+                        throw new AppException(Error.COMMON_EXCEPTION);
+                    }
+                })
+                .orElse(R.no("角色不存在."));
     }
 
     @Override
     @Transactional(rollbackFor = Throwable.class)
     public R editRoleApi(final EditRoleApiRequest editRoleApiRequest) {
-        return Optional.ofNullable(baseMapper.selectOne(new QueryWrapper<SysRoleEntity>().eq("role_code", editRoleApiRequest.roleCode()))).map(sysRole -> {
-            if (!editRoleApiRequest.roleApi().isEmpty() && sysRoleApiService.saveOrUpdateBatch(editRoleApiRequest.roleApi())) {
-                return R.yes(String.format("%1$s编辑角色菜单成功.", editRoleApiRequest.roleCode()));
-            } else {
-                throw new AppException(Error.COMMON_EXCEPTION);
-            }
-        }).orElse(R.no("角色不存在."));
+        return Optional.ofNullable(baseMapper.selectOne(
+                        new QueryWrapper<SysRoleEntity>().eq("role_code", editRoleApiRequest.roleCode())))
+                .map(sysRole -> {
+                    if (!editRoleApiRequest.roleApi().isEmpty()
+                            && sysRoleApiService.saveOrUpdateBatch(editRoleApiRequest.roleApi())) {
+                        return R.yes(String.format("%1$s编辑角色菜单成功.", editRoleApiRequest.roleCode()));
+                    } else {
+                        throw new AppException(Error.COMMON_EXCEPTION);
+                    }
+                })
+                .orElse(R.no("角色不存在."));
     }
 
     @Override
     @Transactional(rollbackFor = Throwable.class)
     public R addRoleUser(final AddRoleUserRequest addRoleUserRequest) {
-        return Optional.ofNullable(baseMapper.selectOne(new QueryWrapper<SysRoleEntity>().eq("role_code", addRoleUserRequest.roleCode()))).map(sysRole -> {
-            if (!addRoleUserRequest.username().isEmpty() && (sysUserRoleService.insertSysUserRoleList(addRoleUserRequest.username().stream().map(item -> new SysUserRoleEntity(addRoleUserRequest.roleCode(), item)).toList())) & sysUserService.saveOrUpdateBatch(addRoleUserRequest.username().stream().map(name -> {
-                final SysUserEntity user = sysUserService.getOne(new QueryWrapper<SysUserEntity>().eq("username", name));
-                user.setSort(sysRole.getSort());
-                return user;
-            }).collect(Collectors.toList()))) {
-                return R.yes(String.format("%1$s添加角色用户成功.", addRoleUserRequest.roleCode()));
-            } else {
-                throw new AppException(Error.COMMON_EXCEPTION);
-            }
-        }).orElse(R.no("角色不存在."));
+        return Optional.ofNullable(baseMapper.selectOne(
+                        new QueryWrapper<SysRoleEntity>().eq("role_code", addRoleUserRequest.roleCode())))
+                .map(sysRole -> {
+                    if (!addRoleUserRequest.username().isEmpty()
+                            && (sysUserRoleService.insertSysUserRoleList(addRoleUserRequest.username().stream()
+                            .map(item -> new SysUserRoleEntity(addRoleUserRequest.roleCode(), item))
+                            .toList()))
+                            & sysUserService.saveOrUpdateBatch(addRoleUserRequest.username().stream()
+                            .map(name -> {
+                                final SysUserEntity user = sysUserService.getOne(
+                                        new QueryWrapper<SysUserEntity>().eq("username", name));
+                                user.setSort(sysRole.getSort());
+                                return user;
+                            })
+                            .collect(Collectors.toList()))) {
+                        return R.yes(String.format("%1$s添加角色用户成功.", addRoleUserRequest.roleCode()));
+                    } else {
+                        throw new AppException(Error.COMMON_EXCEPTION);
+                    }
+                })
+                .orElse(R.no("角色不存在."));
     }
 }
